tests/error/octal_fail.c
// fail "Error at '09': Because of the leading 0, this is an octal constant. The '9' is not valid in base 8."

int _start(){
    return 09;
}
